[gd_scene load_steps=19 format=2]

[ext_resource path="res://Pacman/Mapa/Minigame 1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Pacman/MoveMae/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pacman/MoveMae/caminho.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pacman/tempo/Basic Comical Regular NC.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Pacman/Pontuacao.gd" type="Script" id=6]
[ext_resource path="res://Pacman/tempo/scripts/timer_label.gd" type="Script" id=7]
[ext_resource path="res://Pacman/MoveMae/Iten.gd" type="Script" id=8]
[ext_resource path="res://Pacman/tempo/pngegg.png" type="Texture" id=9]
[ext_resource path="res://Pacman/Mão.tscn" type="PackedScene" id=10]
[ext_resource path="res://Pacman/Itens/Whisky.png" type="Texture" id=11]
[ext_resource path="res://Pacman/Mapa/menuPontuação.png" type="Texture" id=12]
[ext_resource path="res://Pacman/Som/Musica/y2meta.com - Collect Item sound effect (128 kbps).mp3" type="AudioStream" id=13]
[ext_resource path="res://Pacman/Som/Efeitos/y2meta.com - September - Earth, Wind and Fire 8bit Jazz Version (128 kbps).mp3" type="AudioStream" id=14]
[ext_resource path="res://Pacman/Som/Efeitos/y2meta.com - Mr. Sandman - The Chordettes 8bit Jazz Version (128 kbps).mp3" type="AudioStream" id=15]

[sub_resource type="DynamicFont" id=3]
size = 7
outline_size = 2
outline_color = Color( 0.160784, 0.0117647, 0, 0 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://World/tempo/Basic Comical Regular NC.ttf"

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = SubResource( 2 )

[node name="Level" type="Node2D"]

[node name="LevelNavigation" type="Navigation2D" parent="." groups=["LevelNavigation"]]

[node name="Node2D" parent="LevelNavigation" instance=ExtResource( 1 )]
position = Vector2( -16, -1 )

[node name="Enemy" parent="." groups=["Enemy"] instance=ExtResource( 3 )]
position = Vector2( 5694, 160 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 106, 93 )

[node name="Mão" parent="Player" groups=["Player"] instance=ExtResource( 10 )]
position = Vector2( 0, -9 )

[node name="Caminhos" type="Node2D" parent="."]

[node name="caminho" parent="Caminhos" instance=ExtResource( 4 )]
position = Vector2( 13, 127 )

[node name="caminho2" parent="Caminhos" instance=ExtResource( 4 )]
position = Vector2( 259, 18 )

[node name="caminho3" parent="Caminhos" instance=ExtResource( 4 )]
position = Vector2( 287, 170 )

[node name="caminho6" parent="Caminhos" instance=ExtResource( 4 )]
position = Vector2( 167, 69 )

[node name="caminho4" parent="Caminhos" instance=ExtResource( 4 )]
position = Vector2( 26, 26 )

[node name="caminho5" parent="Caminhos" instance=ExtResource( 4 )]
position = Vector2( 169, 135 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = 100

[node name="Pontuacao" type="Node2D" parent="CanvasLayer"]
visible = false
script = ExtResource( 6 )

[node name="Iten" type="AudioStreamPlayer2D" parent="CanvasLayer/Pontuacao"]
stream = ExtResource( 13 )

[node name="September" type="AudioStreamPlayer2D" parent="CanvasLayer/Pontuacao"]
pause_mode = 2
stream = ExtResource( 14 )

[node name="MrSandman" type="AudioStreamPlayer2D" parent="CanvasLayer/Pontuacao"]
pause_mode = 2
stream = ExtResource( 15 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/Pontuacao"]
margin_right = 368.0
margin_bottom = 223.0
color = Color( 0, 0, 0, 0.156863 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Pontuacao"]
margin_left = 112.0
margin_top = 40.0
margin_right = 201.0
margin_bottom = 163.0
color = Color( 0.517647, 0.45098, 0.45098, 0 )

[node name="MenuPontuação" type="Sprite" parent="CanvasLayer/Pontuacao/ColorRect"]
position = Vector2( 72, 60 )
scale = Vector2( 2.09375, 2.18311 )
texture = ExtResource( 12 )

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/Pontuacao"]
visible = false
margin_left = 109.0
margin_top = 46.0
margin_right = 198.0
margin_bottom = 143.0
color = Color( 0.517647, 0.45098, 0.45098, 0 )

[node name="MenuPontuação2" type="Sprite" parent="CanvasLayer/Pontuacao/ColorRect3"]
position = Vector2( 76, 54 )
scale = Vector2( 2.09375, 1.83484 )
texture = ExtResource( 12 )

[node name="Button" type="Button" parent="CanvasLayer/Pontuacao"]
pause_mode = 2
margin_left = 147.0
margin_top = 115.0
margin_right = 223.0
margin_bottom = 135.0
text = "reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/Pontuacao"]
margin_left = 147.0
margin_top = 140.0
margin_right = 221.0
margin_bottom = 160.0
text = "continuar"

[node name="tempo" type="Label" parent="CanvasLayer/Pontuacao"]
anchor_right = 1.0
margin_left = -71.0
margin_top = 98.0
margin_right = 441.0
margin_bottom = 111.0
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "\"00:00:00:00:00\""
align = 1
script = ExtResource( 7 )

[node name="P" type="Label" parent="CanvasLayer/Pontuacao"]
margin_left = 125.0
margin_top = 41.0
margin_right = 191.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "Pontuacao"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Pontuacao"]
position = Vector2( 160, 88 )
scale = Vector2( 0.0336914, 0.03125 )
texture = ExtResource( 9 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/Pontuacao"]
position = Vector2( 186, 88 )
scale = Vector2( 0.0336914, 0.03125 )
texture = ExtResource( 9 )

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Pontuacao"]
position = Vector2( 211, 88 )
scale = Vector2( 0.0336914, 0.03125 )
texture = ExtResource( 9 )

[node name="MenuPontuação2" type="Sprite" parent="."]
position = Vector2( 38, -55 )
scale = Vector2( 1.51562, 2.26453 )
texture = ExtResource( 12 )

[node name="timer_label" type="Label" parent="."]
margin_left = 9.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 0.772549, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "\"00:00:00:00:00\""
align = 1
script = ExtResource( 7 )

[node name="Itens" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Whisky" type="StaticBody2D" parent="Itens" groups=["Itens"]]
position = Vector2( 207, 102 )

[node name="Whisky" type="Sprite" parent="Itens/Whisky"]
position = Vector2( 2, 2 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Itens/Whisky"]
position = Vector2( 0.166667, 0 )
scale = Vector2( 0.833333, 1 )
polygon = PoolVector2Array( -2, -1, -2, 9, 4, 9, 4, -1, 2, -5, 0, -5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Whisky2" type="StaticBody2D" parent="Itens" groups=["Itens"]]
position = Vector2( 107, 51 )

[node name="Whisky" type="Sprite" parent="Itens/Whisky2"]
position = Vector2( 2, 2 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Itens/Whisky2"]
position = Vector2( 0.166667, 0 )
scale = Vector2( 0.833333, 1 )
polygon = PoolVector2Array( -2, -1, -2, 9, 4, 9, 4, -1, 2, -5, 0, -5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Whisky3" type="StaticBody2D" parent="Itens" groups=["Itens"]]
position = Vector2( 149, 140 )

[node name="Whisky" type="Sprite" parent="Itens/Whisky3"]
position = Vector2( 2, 2 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Itens/Whisky3"]
position = Vector2( 0.166667, 0 )
scale = Vector2( 0.833333, 1 )
polygon = PoolVector2Array( -2, -1, -2, 9, 4, 9, 4, -1, 2, -5, 0, -5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Whisky4" type="StaticBody2D" parent="Itens" groups=["Itens"]]
position = Vector2( 39, 80 )

[node name="Whisky" type="Sprite" parent="Itens/Whisky4"]
position = Vector2( 2, 2 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Itens/Whisky4"]
position = Vector2( 0.166667, 0 )
scale = Vector2( 0.833333, 1 )
polygon = PoolVector2Array( -2, -1, -2, 9, 4, 9, 4, -1, 2, -5, 0, -5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Whisky5" type="StaticBody2D" parent="Itens" groups=["Itens"]]
position = Vector2( 288, 55 )

[node name="Whisky" type="Sprite" parent="Itens/Whisky5"]
position = Vector2( 2, 2 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Itens/Whisky5"]
position = Vector2( 0.166667, 0 )
scale = Vector2( 0.833333, 1 )
polygon = PoolVector2Array( -2, -1, -2, 9, 4, 9, 4, -1, 2, -5, 0, -5 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="CanvasLayer/Pontuacao/Button" to="CanvasLayer/Pontuacao" method="_on_Button_pressed"]
